Java 11 module workaround for compiling with mocks