@@ -98,8 +98,8 @@
         <pdfbox.version>2.0.16</pdfbox.version>
         <hystrix.version>1.5.18</hystrix.version>
         <!-- Test deps versions -->
-        <powermock.version>2.0.0</powermock.version>
-        <junit.version>4.13.1</junit.version>
+        <powermock.version>2.0.9</powermock.version>
+        <junit.version>4.13.2</junit.version>
         <xmlunit.version>1.6</xmlunit.version>
         <h2database.version>1.4.199</h2database.version>
 
@@ -861,6 +861,11 @@
 
             <dependency>
                 <groupId>org.powermock</groupId>
+                <artifactId>powermock-core</artifactId>
+                <version>${powermock.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
                 <artifactId>powermock-module-junit4</artifactId>
                 <version>${powermock.version}</version>
             </dependency>
@@ -960,13 +965,29 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <!-- prevent forking java process from stealing
-                    window focus on Mac OS -->
-                    <argLine>-Djava.awt.headless=true</argLine>
-                    <!--systemPropertyVariables>
-                        <oskari.syslog.level></oskari.syslog.level>
-                    </systemPropertyVariables -->
-                    <argLine>-Doskari.syslog.level=warn</argLine>
+                    <!-- headless=true prevents forking java process from stealing window focus on Mac OS -->
+                    <!-- add-opens and illegal-access is a workaround for test/mock libraries -->
+                    <!-- syslog.level makes builds less verbose (defaults to system.out logger) -->
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+                        --add-opens java.base/java.util.stream=ALL-UNNAMED
+                        --add-opens java.base/java.net=ALL-UNNAMED
+                        --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+                        --illegal-access=warn
+                        -Djava.awt.headless=true
+                        -Doskari.syslog.level=warn</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <!-- Workaround for test/mock libraries -->
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=permit</argLine>
                 </configuration>
             </plugin>
             <plugin>
